:baby_chick: fix scrollbar for firefox

--- a/static/style.scss
+++ b/static/style.scss
@@ -1,26 +1,18 @@
 :root {
     --tooltip-content: "copy";
 }
-body {
-    font-family: "Nunito", sans-serif;
-}
-/* width */
+
 ::-webkit-scrollbar {
     width: 3px;
-    border-radius: 3px;
 }
-
-/* Track */
 ::-webkit-scrollbar-track {
     background: #8da9c4;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
     background: #154783;
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background: #113c70;
 }
@@ -32,6 +24,7 @@ body {
 }
 
 body {
+    font-family: "Nunito", sans-serif;
     background-color: #001233;
 }
 .emojis-container-box {
@@ -71,7 +64,6 @@ body {
         align-items: center;
         list-style: none;
         // border-bottom: 1px solid #d8d8d8;
-
         li {
             flex: 1;
             .show-emoji {
@@ -131,7 +123,8 @@ body {
             height: 600px;
             transition: all 0.2s;
             float: left;
-            overflow: auto;
+            overflow-y: scroll;
+            scrollbar-width: thin; //only for firefox
             .emojis {
                 float: left;
                 position: relative;
